--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py                0.12.0
 aiohttp                3.7.4.post0
 aioredis               1.3.1      
 antlr4-python3-runtime 4.9.2      
